--- a/public/index.html
+++ b/public/index.html
@@ -38,18 +38,18 @@
     </div>
   </nav>
 
-  <div class="container mt-3">
+  <!-- <div class="container mt-3">
     <div class="product">
       <div class="thumbnail" style="background-image: url('https://via.placeholder.com/350')"></div>
       <div class="flex-grow-1 p-4">
         <h5 class="title">아기다스 신발</h5>
         <p class="date">2030년 1월 8일</p>
         <p class="price">20000원</p>
-        <p class="float-end">?0</p>
+        <p class="float-end">♡0</p>
       </div>
     </div>
 
-  </div>
+  </div> -->
 
 
 
@@ -91,7 +91,7 @@
           <h5 class="title"><a href="/detail.html?id=${doc.id}">${doc.data().제목}</a></h5>
           <p class="date">2030년 1월 8일</p>
           <p class="price">${doc.data().가격}원</p>
-          <p class="float-end">?0</p>
+          <p class="float-end">♡0</p>
         </div>
         </div>`;
         $('.container').append(템플릿)
