--- a/public/index.html
+++ b/public/index.html
@@ -38,8 +38,8 @@
     </div>
   </nav>
 
-  <!-- <div class="container mt-3">
-    <div class="product">
+  <div class="container mt-3">
+    <!-- <div class="product">
       <div class="thumbnail" style="background-image: url('https://via.placeholder.com/350')"></div>
       <div class="flex-grow-1 p-4">
         <h5 class="title">아기다스 신발</h5>
@@ -47,10 +47,9 @@
         <p class="price">20000원</p>
         <p class="float-end">♡0</p>
       </div>
-    </div>
+    </div> -->
 
-  </div> -->
-
+  </div>  
 
 
   <script src="https://www.gstatic.com/firebasejs/8.6.5/firebase-app.js"></script>
