--- a/public/detail.html
+++ b/public/detail.html
@@ -76,7 +76,7 @@
       <hr>
       <h5 class="title">상품명</h5>
       <p class="date">올린DAY</p>
-      <p class="price">PRICE</p>
+      <p class="price">가격</p>
     </div>
 </div>
 
@@ -110,19 +110,19 @@
 
         
         판매자uid = result.data().uid;
-        상품명 = result.data().TITLE;
+        상품명 = result.data().제목;
 
         // Timestamp 변환
-        var date = new Date(docData.DAY.seconds * 1000 + docData.DAY.nanoseconds / 1000000);
+        var date = new Date(docData.날짜.seconds * 1000 + docData.날짜.nanoseconds / 1000000);
         var formattedDate = date.toLocaleDateString() + ' ' + date.toLocaleTimeString();
 
-        // IMAGE URL 사용
-        var imageUrl = docData.IMAGE;
+        // 이미지 URL 사용
+        var imageUrl = docData.이미지;
         // HTML 업데이트
         $('.detail-pic').css('background-image', `url(${imageUrl})`);
-        $('.title').text(docData.TITLE);
+        $('.title').text(docData.제목);
         $('.date').text(formattedDate);
-        $('.price').text(docData.PRICE + '원');
+        $('.price').text(docData.가격 + '원');
       } else {
         console.log('No such document!');
       }
