--- a/public/index.html
+++ b/public/index.html
@@ -85,11 +85,11 @@
       결과.forEach((doc)=>{
         console.log(doc)
         var 템플릿 = `<div class="product">
-        <div class="thumbnail" style="background-image: url('${doc.data().IMAGE}')"></div>
+        <div class="thumbnail" style="background-image: url('${doc.data().이미지}')"></div>
         <div class="flex-grow-1 p-4">
-          <h5 class="title"><a href="/detail.html?id=${doc.id}">${doc.data().TITLE}</a></h5>
+          <h5 class="title"><a href="/detail.html?id=${doc.id}">${doc.data().제목}</a></h5>
           <p class="date">2030년 1월 8일</p>
-          <p class="price">${doc.data().PRICE}원</p>
+          <p class="price">${doc.data().가격}원</p>
           <p class="float-end">♡0</p>
         </div>
         </div>`;
