--- a/public/upload.html
+++ b/public/upload.html
@@ -103,13 +103,13 @@
                     console.log('업로드된 경로는', url);
 
                     var 저장할거 = { 
-                        TITLE : $('#title').val(),
-                        PRICE : $('#price').val(),
-                        CONTENT : $('#content').val(),
-                        DAY : new Date(),
-                        IMAGE : url,
+                        제목 : $('#title').val(),
+                        가격 : $('#price').val(),
+                        내용 : $('#content').val(),
+                        날짜 : new Date(),
+                        이미지 : url,
                         uid : JSON.parse(localStorage.getItem('user')).uid,
-                        NAME: JSON.parse(localStorage.getItem('user')).displayName
+                        이름: JSON.parse(localStorage.getItem('user')).displayName
                     }
                     db.collection('product').add(저장할거).then((result)=>{
                         console.log(result);
