--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
   <link href="main.css" rel="stylesheet">
 </head>
 <body> 
-
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">블랙마켓</a>
@@ -73,6 +72,7 @@
 
     // Initialize Firebase
     firebase.initializeApp(firebaseConfig);
+
     const db = firebase.firestore();
     
     // Check login status and toggle buttons
@@ -98,23 +98,36 @@
             window.location.href = 'index.html';
         });
     });
+    
+    // 데이터 정렬하여 가져오기
+    db.collection('product').orderBy('날짜', 'desc').get().then((결과) => {
+      결과.forEach((doc) => {
+        console.log(doc);
+        const data = doc.data();
 
-    db.collection('product').get().then((결과)=>{
-      결과.forEach((doc)=>{
-        console.log(doc)
+        // Firestore의 Timestamp 데이터를 JavaScript Date 객체로 변환
+        const timestamp = data.날짜;
+        const date = new Date(timestamp.seconds * 1000 + timestamp.nanoseconds / 1000000);
+        const formattedDate = date.toLocaleDateString('ko-KR', {
+          year: 'numeric',
+          month: 'long',
+          day: 'numeric'
+        });
+
         var 템플릿 = `<div class="product">
-        <div class="thumbnail" style="background-image: url('${doc.data().이미지}')"></div>
-        <div class="flex-grow-1 p-4">
-          <h5 class="title"><a href="/detail.html?id=${doc.id}">${doc.data().제목}</a></h5>
-          <p class="date">2030년 1월 8일</p>
-          <p class="price">${doc.data().가격}원</p>
-          <p class="float-end">♡0</p>
-        </div>
+          <div class="thumbnail" style="background-image: url('${data.이미지}')"></div>
+          <div class="flex-grow-1 p-4">
+            <h5 class="title"><a href="/detail.html?id=${doc.id}">${data.제목}</a></h5>
+            <p class="date">${formattedDate}</p>
+            <p class="price">${data.가격}원</p>
+            <p class="float-end">♡0</p>
+          </div>
         </div>`;
-        $('.container').append(템플릿)
-      })
-    })
+        $('.container').append(템플릿);
+      });
+    }).catch((error) => {
+      console.error("Error getting documents: ", error);
+    });
   </script>
-
 </body>
 </html>
